Version 2.02.89 - 
==================================
  Fix command line option decoding.
  Reset LV status when unlinking LV from VG.
  Fix overly strict extent-count divisibility requirements for striped mirrors.
  Fix rounding direction in lvresize when reducing volume size.
  Fix possible overflow of size if %FREE or %VG is used.
  Fix vgchange activation of snapshot with virtual origin.
  Activate virtual snapshot origin exclusively (only on local node in cluster).
  Fix lv_mirror_count to handle mirrored stripes properly.
  Fix failure to down-convert a mirror to linear due to udev "dev open" conflict
  Fix mirrored log creation when PE size is small - force log_size >= region_size
  Fix log size calculation when only a log is being added to a mirror.
  Work around resume_lv causing error LV scanning during splitmirror operation.
  Add 7th lv_attr char to show the related kernel target.
  Terminate pv_attr field correctly. (2.02.86)
  Fix 'not not' typo in pvcreate man page.
  Improve man page style for fsadm, lvreduce, lvremove, lvrename, lvresize.
  Support break for vgchange and vgrefresh operation.
  Switch int to unsigned type for pvmetadatacopies for pv_create().
  Replace :space: with [\t ] for awk in vgimportclone (not widely supported).
  Begin using 64-bit status field flags.
  Detect sscanf recovering_region input error in cmirrord pull_state().
  Fix error path bitmap leak in cmirrord import_checkpoint().
  Log unlink() error in cmirrord remove_lockfile().
  Remove incorrect requirement for -j or -m from lvchange error message.
  Fix unsafe table load when splitting off smaller mirror from a larger one.
  Use size_t return type for text_vg_export_raw() and export_vg_to_buffer().
  Add configure --enable-lvmetad for building the (experimental) LVMetaD.
  Fix resource leak when strdup fails in _get_device_status() (2.02.85).
  Directly allocate buffer memory in a pvck scan instead of using a mempool.